tests/errors/infer_first_assignment_derived_01.f90
type :: t
    integer :: n
end type
a = t(1)
